--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,8 @@
 
 buildscript {
     repositories {
-        jcenter()
+        maven { url "http://jzaccone.github.io/SlidingMenu-aar" }
+        mavenCentral();
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.5.0'
