--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,8 @@
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality. 
     -->
+    <uses-permission android:name="android.permission.ACCESS_GPS" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL" />
@@ -14,7 +16,7 @@
     <application
         android:name=".VitalizeApplication"
         android:allowBackup="true"
-        android:icon="@drawable/vitalizethebest"
+        android:icon="@drawable/vitalize_logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -45,7 +47,6 @@
             android:label="@string/title_activity_maps" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity android:name=".MembersAndInvitesActivity" />
         <activity android:name=".ChatActivity" />
         <activity android:name=".Profile"
             android:label="User Profile" />
